<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fill_lost_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kanchsproject.teacherrating.FillLostInfo">

    <TextView
        android:text="@string/layout_info_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginTop="19dp"
        android:id="@+id/editText_subjects" />

    <TextView
        android:text="@string/layout_info_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_subjects"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:layout_below="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:id="@+id/editText_school" />

    <TextView
        android:text="@string/layout_info_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_school"
        android:layout_toStartOf="@+id/editText_school"
        android:layout_marginTop="15dp"
        android:id="@+id/textView6" />

    <RadioGroup android:id="@+id/radioGroup_gender" android:contentDescription="性别" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignEnd="@+id/editText_school"
        android:layout_toEndOf="@+id/textView6">

        <RadioButton
            android:text="@string/layout_info_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_toEndOf="@+id/textView6"
            android:layout_marginStart="11dp"
            android:layout_marginTop="27dp"
            android:id="@+id/radioButton_male" />

        <RadioButton
        android:text="@string/layout_info_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/radioButton_male"
        android:layout_toEndOf="@+id/radioButton_male"
        android:layout_marginStart="11dp"
        android:id="@+id/radioButton_female" />
    </RadioGroup>

    <Button
        android:text="@string/layout_button_submit_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:id="@+id/button_submit_fill"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/checkBox_promise"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:text="我确认提交的信息完全真实可靠"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox_promise"
        android:layout_below="@+id/radioGroup_gender"
        android:layout_alignStart="@+id/textView6" />

</RelativeLayout>
